--- a/metrc_stock/views/stock_location_views.xml
+++ b/metrc_stock/views/stock_location_views.xml
@@ -5,9 +5,16 @@
         <field name="model">stock.location</field>
         <field name="inherit_id" ref="stock.view_location_form"/>
         <field name="arch" type="xml">
-            <field name="usage" position="after">
-                <field name="metrc_location_id" options="{'no_create': True}"/>
-            </field>
+            <group name="additional_info" position="after">
+                <group string="Metrc Information" name="metrc_info"
+                    attrs="{'invisible': [('usage', '!=', 'internal')]}">
+                    <field name="facility_license_id" 
+                        attrs="{'invisible': [('usage', '!=', 'internal')]}"/>
+                    <field name="metrc_location_id" options="{'no_create': True}"
+                        domain="[('facility_license_id', '=', facility_license_id)]"
+                        attrs="{'required': [('facility_license_id', '!=', False)]}"/>
+                </group>
+            </group>
         </field>
     </record>
 </odoo>
