--- a/lume_sales/views/promo.xml
+++ b/lume_sales/views/promo.xml
@@ -17,11 +17,14 @@
                     <div>
                         <field name="recurring"/>
                         <field name="recurring_cycle" attrs="{'invisible': [('recurring', '=', False)], 'required':[('recurring','=',True)]}" style="width: auto !important;"/>
-                        <field name="daily_start_time" string="Start Time" widget="float_time_24" attrs="{'invisible': [('recurring', '=', False)], 'required':[('recurring','=',True)]}"/>
-                        <field name="daily_end_time" string="End Time" widget="float_time_24" attrs="{'invisible': [('recurring', '=', False)], 'required':[('recurring','=',True)]}"/>
                         <!-- <field name="recurring_day" attrs="{'invisible': [('recurring', '=', False)]}" style="padding-left:10px;"/> -->
                         <field name="recurring_days" attrs="{'invisible': [('recurring', '=', False)]}" widget="many2many_checkboxes"/>
                     </div>
+                </field>
+                <field name="rule_date_to" position="after">
+                    <field name="check_time" string="Partial Day"/>
+                    <field name="daily_start_time" string="Start Time" widget="float_time_24" attrs="{'invisible': [('check_time', '=', False)], 'required':[('check_time','=',True)]}"/>
+                    <field name="daily_end_time" string="End Time" widget="float_time_24" attrs="{'invisible': [('check_time', '=', False)], 'required':[('check_time','=',True)]}"/>
                 </field>
                 <field name="rule_products_domain" position="after">
                     <field name="store_ids" string="Based on Store" widget="many2many_tags" options="{'no_create':'1','no_edit':'1'}"/>
