--- a/lume_sales/views/product_catalog.xml
+++ b/lume_sales/views/product_catalog.xml
@@ -13,11 +13,11 @@
                 <field name="uom_id"/>
                 <field name="thc_type"/>
                 <field name="categ_id"/>
-                <field name="quantity_at_warehouses"/>
+                <field name="quantity_at_store"/>
                 <field name="is_tiered"/>
                 <templates>
                     <t t-name="kanban-box">
-                        <div t-attf-class="o_kanban_record d-flex o_lpc_industry_product {{JSON.parse(record.quantity_at_warehouses.raw_value)[context.warehouse_id + ''] == 0 ? 'catalog_card_hide_0' : 'false_test'}}" style="min-height: 100px;align-items:center;" t-attf-data-type="{{record.thc_type.raw_value}}" t-attf-data-qty="{{JSON.parse(record.quantity_at_warehouses.raw_value)[context.warehouse_id + '']}}">
+                        <div t-attf-class="o_kanban_record d-flex o_lpc_industry_product {{record.quantity_at_store.raw_value == 0 ? 'catalog_card_hide_0' : 'false_test'}}" style="min-height: 100px;align-items:center;" t-attf-data-type="{{record.thc_type.raw_value}}" t-attf-data-qty="{{record.quantity_at_store.raw_value}}">
                             <button class="o_kanban_image" style="z-index: 50;border: none;padding: 0px;background-color: transparent;">
                                 <img t-att-src="kanban_image('product.product', 'image_128', record.id.raw_value)" alt="Product" class="o_image_64_contain"/>
                             </button>
@@ -36,7 +36,7 @@
                                             <li><strong>Price: <field t-if="!record.is_tiered.raw_value" name="list_price" widget="monetary" options="{'currency_field': 'currency_id'}"></field><field t-if="record.is_tiered.raw_value" name="tier_price" widget="monetary" options="{'currency_field': 'currency_id'}"></field></strong></li>
                                             <field name="currency_id" invisible="True"/>
                                             <li><strong>On hand: 
-                                                <t t-esc="JSON.parse(record.quantity_at_warehouses.raw_value)[context.warehouse_id + '']"/>
+                                                <t t-esc="record.quantity_at_store.raw_value"/>
                                                 <!-- <field name="qty_available"/>  -->
                                                 <field name="uom_id"/></strong></li>
                                             <li><field name="tier"></field></li>
